deploy/kubernetes/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overstate-web
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overstate.sigaint.au`)
      kind: Rule
      services:
        - name: overstate-app
          port: 8000
  tls:
    secretName: overstate-web-tls
